<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- User's category -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->

        <TextView
            android:text="@string/category_product_name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_products_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

    </LinearLayout>


    <!-- Price category -->

    <LinearLayout
        android:id="@+id/container_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_price_per_unit"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <!-- Units for price (euros) -->
            <TextView
                android:id="@+id/label_price_units"
                android:text="@string/unit_price"
                android:inputType="numberDecimal"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Quantity category -->

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Quantity field -->

            <EditText
                android:id="@+id/edit_quantity"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for quantity (units) -->

            <TextView
                android:id="@+id/label_quantity_units"
                android:text="@string/unit_quantity"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>

    </LinearLayout>

    <!-- Features category -->

    <LinearLayout
        android:id="@+id/container_features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_Features"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Feature field -->
            <EditText
                android:id="@+id/edit_features"
                android:hint="@string/hint_features"
                android:inputType="textCapSentences"
                style="@style/EditorFieldStyle" />

            <!-- No units for features  -->

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
