<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of items -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/product_image_to_show"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/headphones"
        android:scaleType="fitXY"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/user_product_name_to_show"
        tools:text="@string/hint_products_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/price_per_unit_to_show"
            tools:text="@string/hint_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/quantity_to_show"
            tools:text="@string/hint_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/holo_blue_dark" />

    </LinearLayout>

    <TextView
        android:id="@+id/features_to_show"
        tools:text="@string/hint_features"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/one_less_to_sell"
            android:text="-"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView
            android:id="@+id/quantity_to_sell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/one_more_to_sell"
            android:text="+"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

    <TextView
        android:text="@string/total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:gravity="end"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        android:paddingBottom="8dp"
        />

    <TextView
        android:id="@+id/total_price"
        tools:text="45 €"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/darker_gray" />

    </LinearLayout>


    <Button
        android:id="@+id/sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sell"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:padding="8dp"/>
</LinearLayout>